--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 astroid==2.4.2
 autopep8==1.5.4
 backcall==0.2.0
+blinker==1.4
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 decorator==4.4.2
 Flask==1.1.2
 Flask-Cors==3.0.9
+Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
 idna==2.10
