--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ decorator==4.4.2
 Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-DebugToolbar==0.11.0
-Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
 idna==2.10
@@ -23,7 +22,6 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-oauthlib==3.1.0
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -38,6 +36,7 @@ pyOpenSSL==19.1.0
 python-dotenv==0.14.0
 requests==2.24.0
 six==1.15.0
+slack-sdk==3.0.0
 SQLAlchemy==1.3.20
 toml==0.10.1
 traitlets==4.3.3
