--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ psycopg2-binary==2.8.6
 ptyprocess==0.6.0
 pycodestyle==2.6.0
 pycparser==2.20
+pyee==7.0.4
 Pygments==2.7.2
 pylint==2.6.0
 pyOpenSSL==19.1.0
