--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,106 @@
+appdirs==1.4.4
+apturl==0.5.2
 astroid==2.4.2
 autopep8==1.5.4
 backcall==0.2.0
+bcrypt==3.1.7
 blinker==1.4
-certifi==2020.6.20
-cffi==1.14.3
+Brlapi==0.7.0
+cachetools==4.1.1
+certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
-cryptography==3.2.1
+colorama==0.4.3
+command-not-found==0.3
+cryptography==3.0
+cupshelpers==1.0
+dbus-python==1.2.16
 decorator==4.4.2
-Flask==1.1.2
-Flask-Cors==3.0.9
-Flask-DebugToolbar==0.11.0
-Flask-SQLAlchemy==2.4.4
-gunicorn==20.0.4
+defer==1.0.6
+distlib==0.3.1
+distro==1.5.0
+distro-info===0.23ubuntu1
+duplicity==0.8.12.0
+fasteners==0.14.1
+filelock==3.0.12
+future==0.18.2
+google-api-python-client==1.7.11
+google-auth==1.5.1
+google-auth-httplib2==0.0.4
+gyp==0.1
+httplib2==0.18.1
 idna==2.10
+ipython==7.17.0
 ipython-genutils==0.2.0
 isort==5.6.4
-itsdangerous==1.1.0
-jedi==0.17.2
-Jinja2==2.11.2
+jedi==0.17.0
+jeepney==0.4.3
+keyring==21.3.0
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.5
 lazy-object-proxy==1.4.3
+lockfile==0.12.2
+louis==3.14.0
+macaroonbakery==1.3.1
+Mako==1.1.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
-parso==0.7.1
-pexpect==4.8.0
+monotonic==1.5
+netifaces==0.10.4
+oauth2client==4.1.2
+oauthlib==3.1.0
+olefile==0.46
+paramiko==2.7.1
+parso==0.7.0
+pexpect==4.6.0
 pickleshare==0.7.5
-prompt-toolkit==3.0.8
-psycopg2-binary==2.8.6
-ptyprocess==0.6.0
+Pillow==7.2.0
+prompt-toolkit==3.0.6
+protobuf==3.12.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+pycairo==1.16.2
 pycodestyle==2.6.0
-pycparser==2.20
-pyee==7.0.4
-Pygments==2.7.2
+pycups==2.0.1
+PyDrive==1.3.1
+Pygments==2.3.1
+PyGObject==3.38.0
+PyJWT==1.7.1
 pylint==2.6.0
+pymacaroons==0.13.0
+PyNaCl==1.4.0
 pyOpenSSL==19.1.0
-python-dotenv==0.14.0
-requests==2.24.0
+pyRFC3339==1.1
+python-apt==2.1.3+ubuntu1
+python-dateutil==2.8.1
+python-debian==0.1.37
+pytz==2020.1
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.47
+requests==2.23.0
+requests-unixsocket==0.2.0
+rsa==4.0
+SecretStorage==3.1.2
+simplejson==3.17.0
 six==1.15.0
-slack-sdk==3.0.0
-SQLAlchemy==1.3.20
+slack-bolt==1.1.1
+slack-sdk==3.1.0
+SQLAlchemy==1.3.19
+systemd-python==234
 toml==0.10.1
 traitlets==4.3.3
-urllib3==1.25.11
-wcwidth==0.2.5
-Werkzeug==1.0.1
+ubuntu-advantage-tools==24.4
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==0.6
+urllib3==1.25.9
+usb-creator==0.3.7
+virtualenv==20.0.35
+wadllib==1.3.4
+wcwidth==0.1.9
 wrapt==1.12.1
+xkit==0.0.0
