change reqs and fixing venv

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,29 @@
-autopep8
-backcall
-bcrypt
-brlapi
-cachetools
-colorama
-command-not-found
-cryptography
-cupshelpers
-dbus-python
-decorator
-defer
-distro
-distro-info
-duplicity
-fasteners
-flask-cors
-flask-debugtoolbar
-flask-sqlalchemy
-future
-google-api-python-client
-google-auth
-google-auth-httplib2
-gunicorn
-gyp
-ipython
-ipython-genutils
-jedi
-language-selector
-launchpadlib
-lockfile
-louis
-macaroonbakery
-mako
-monotonic
-netifaces
-oauth2client
-oauthlib
-olefile
-paramiko
-pickleshare
-pillow
-pip-chill
-prompt-toolkit
-protobuf
-psycopg2-binary
-pyasn1
-pyasn1-modules
-pycups
-pydrive
-pygments
-pygobject
-pyjwt
-pylint
-pymacaroons
-pynacl
-pyopenssl
-pyrfc3339
-python-apt
-python-dateutil
-python-debian
-python-dotenv
-pytz
-pyxdg
-pyyaml
-reportlab
-requests
-requests-unixsocket
-rsa
-sentry-sdk
-simplejson
-slack-sdk
-systemd-python
-traitlets
-ubuntu-advantage-tools
-ubuntu-drivers-common
-ufw
-unattended-upgrades
-uritemplate
-usb-creator
-virtualenv
-xkit
+astroid==2.4.2
+autopep8==1.5.4
+blinker==1.4
+certifi==2020.12.5
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.9
+Flask-DebugToolbar==0.11.0
+Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
+idna==2.10
+isort==5.6.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pycodestyle==2.6.0
+pylint==2.6.0
+requests==2.25.0
+sentry-sdk==0.19.5
+six==1.15.0
+slack-sdk==3.1.0
+SQLAlchemy==1.3.20
+toml==0.10.2
+urllib3==1.26.2
+Werkzeug==1.0.1
+wrapt==1.12.1
